tests/neg-macros/delegate-match-3.check

-- Error: tests/neg-macros/delegate-match-3/Test_2.scala:3:2 -----------------------------------------------------------
3 |  f // error
  |  ^
  |  NoMatchingImplicits
  |  no implicit values were found that match type A
  | This location contains code that was inlined from Test_2.scala:3
